# adm0_reverse

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
integration_test/: Makefile  main.cpp
src/adm0_reverse/: __init__.py  builder.py  cli.py  codegen.py  duckdb_oracle.py  oracle.py  quadtree.py  quantize.py  serialize.py
tests/: __init__.py  test_builder.py  test_codegen.py  test_duckdb_oracle.py  test_integration.py  test_quadtree.py  test_quantize.py  test_serialize.py
