[project]
name = "adm0-reverse"
version = "0.1.0"
description = "Header-only C++ country lookup generator using sparse quadtree"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
adm0-reverse = "adm0_reverse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adm0_reverse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
